# hpxML

./: README.md
Time_measurement/: CMakeLists.txt  glaberge_2555027.out  glaberge_2555251.out  glaberge_2559088.out  main.cpp  measurement.sbatch  measurement.sh
Time_measurement/headers/: 1_loop_level.h  2_loop_level.h  3_loop_level.h  4_loop_level.h  example.h
Time_measurement/predictions/: BigData_Zahra.txt  BigData_Zahra_bias.txt  BigData_Zahra_bias_improved.txt  BigData_Zahra_improved.txt  BigData_knnc.txt  BigData_knnr.txt  BigData_rfc.txt  BigData_rfr.txt  stencil_Zahra.txt  stencil_Zahra_improved.txt  stencil_knnr.txt  stencil_rfr.txt
Time_measurement/predictions/matrix_mult/: matrix_mult_Zahra.txt  matrix_mult_knnc.txt  matrix_mult_knnr.txt  matrix_mult_rfc.txt  matrix_mult_rfr.txt
Training_data/: CMakeLists.txt  main.cpp  train.sh
Training_data/algorithms/dynamic_and_times/: 1_loop_level.h  2_loop_level.h  3_loop_level.h  4_loop_level.h  all_functions.hpp
Training_data/algorithms/static/: 1_loop_level.cpp  2_loop_level.cpp  3_loop_level.cpp  4_loop_level.cpp
Training_data/algorithms/static_copy/: 4_loop_level.cpp
Training_data/matrix_mult/: README.md  main.cpp  test_data_matrix_candidates.txt  train.sbatch  train_data_matrix_debug.txt  training.txt
Training_data/matrix_mult/algorithms/: 1_loop_level.h  2_loop_lambda.h  (+4 more)
Training_data/training_lists_experiments/: Stencil.txt  big_training_shuffled.txt  matrix_mult_training.txt  matrix_mult_training_big3.txt  matrix_train_refine.txt  variances.txt  variances_last.txt
examples/: CMakeLists.txt  README.md
examples/matrix_mult/: main.cpp
examples/nbody/: barnesHut.hpp  body_cube.hpp  computing_force_location_velocity.hpp  evaluating_performances.hpp  main.cpp  octree.hpp
examples/stencil/: main.cpp
examples/stream/: main.cpp
(+76 files in other folders)
